--- a/scss/AssetUploadField.scss
+++ b/scss/AssetUploadField.scss
@@ -23,7 +23,7 @@ body.cms.ss-uploadfield-edit-iframe, .composite.ss-assetuploadfield .details fie
 		text-shadow: 0px 1px 0px #fff;
 	}
 	.fieldholder-small{
-		margin-top:-8px;
+		
 		label{
 			margin-left:0;
 		}
